syntax = "proto3";

message HeaderProtoMessage {

    message EquihashSolutionMessage {
        repeated uint32 ints = 1;
    }

    bytes version = 1;
    bytes parentId = 2;
    bytes adProofsRoot = 3;
    bytes stateRoot = 4;
    bytes transactionsRoot = 5;
    uint64 timestamp = 6;
    uint32 height = 7;
    uint64 nonce = 8;
    uint64 difficulty = 9;
    EquihashSolutionMessage equihashSolution = 10;
}